# oporus-mousiki-recovered

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
examples/: decode.rs  decode_celt_fixed.rs  opus_packet_tool.rs  trivial_example.rs
examples/playback/: Cargo.toml
examples/playback/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_fuzzer.rs
mousiki-dred-weights/: build.rs
oporus-deep-plc-weights/: Cargo.toml  README.md  build.rs
oporus-deep-plc-weights/src/: lib.rs
oporus-dred-weights/: Cargo.toml  README.md  build.rs
oporus-dred-weights/src/: lib.rs
src/: dred_rdovae_dec_data.rs  dred_rdovae_enc_data.rs  dred_stats_data.rs  lib.rs  opus_decoder.rs  pitchdnn_data.rs  repacketizer.rs
src/celt/: bands.rs  celt_decoder.rs  celt_encoder.rs  deep_plc.rs  fixed_ops.rs  math_fixed.rs  mod.rs  modes.rs  vq.rs
tests/: codec_api.rs  extensions.rs  hybrid_decode.rs  hybrid_encode.rs  lpc_inv_pred_gain.rs  opus_encode_regressions.rs  opus_padding.rs  packet_helpers.rs  repacketizer.rs  silk_schur.rs  test_celt_fixed_point.rs  test_opus_decode.rs  test_opus_encode.rs  test_opus_projection.rs  trivial_example.rs
tests/common/: mod.rs
