[workspace]
members = [
    ".",
    "examples/playback",
    "mousiki-dred-weights",
    "mousiki-deep-plc-weights",
]
exclude = ["fuzz"]
resolver = "3"

[package]
name = "mousiki"
description = "Pure Rust Opus codec."
homepage = "https://github.com/mlm-games/mousiki"
repository = "https://github.com/mlm-games/mousiki"
authors = [
    "nemurubaka <cijiugechu@gmail.com>", # Seems to have Had deleted/privated the og repo
]
version = "0.2.1"
edition = "2024"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
keywords = ["audio", "codec", "decoder", "opus"]
exclude = [
    ".claude",
    ".github",
    ".DS_Store",
    "AGENTS.md",
    "BENCHMARK_COMPARE.md",
    "CLAUDE.md",
    "Dockerfile.opus-fuzz",
    "FIXED_POINT_ALIGN_PLAN.md",
    "ctests",
    "opus-c",
    "opus-go",
    "opus_decode_fuzzer",
    "scripts",
    "testdata",
    "*.opuspkt",
    "*.pcm",
    "*.wav",
]

[features]
default = []
fixed_point = []
force-scalar = []
enable_res24 = ["fixed_point"]
deep_plc = ["dred"]
deep_plc_weights = ["deep_plc", "mousiki-deep-plc-weights"]
deep_plc_weights_fetch = ["deep_plc_weights", "mousiki-deep-plc-weights/fetch"]
dred = ["mousiki-dred-weights"]
dred_fetch = ["dred", "mousiki-dred-weights/fetch"]
custom_modes = []
silk_strict_asserts = []
silk_debug = ["dep:spin"]
silk_tic_toc = ["dep:spin"]
dhat_alloc = ["dep:dhat"]

[dependencies]
libm = "0.2"
cfg-if = "1.0"
log = { version = "0.4", default-features = false }
bitflags = "2"
spin = { version = "0.9", default-features = false, features = [
    "mutex",
    "spin_mutex",
], optional = true }
mousiki-deep-plc-weights = { version = "0.1.0", path = "mousiki-deep-plc-weights", optional = true }
mousiki-dred-weights = { version = "0.1.0", path = "mousiki-dred-weights", optional = true }
dhat = { version = "0.3", optional = true }


[lints.clippy]
cast_lossless = "warn"
comparison_chain = "warn"
default_trait_access = "warn"
explicit_deref_methods = "warn"
if_not_else = "warn"
index_refutable_slice = "warn"
manual_assert = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
needless_pass_by_value = "warn"
redundant_else = "warn"
excessive_precision = "allow"

[dev-dependencies]
sha2 = "0.10"
