[workspace]
members = [
    ".",
    "examples/playback",
    "oporus-dred-weights",
    "oporus-deep-plc-weights",
]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
version = "0.2.4"
edition = "2024"
authors = ["mlm-games"]                            # is mandatory...
homepage = "https://github.com/mlm-games/oporus"
repository = "https://github.com/mlm-games/oporus"
license = "LGPL-2.1"


[workspace.dependencies]
sha2 = "0.11"
flate2 = "1"
tar = "0.4"
ureq = { version = "3", features = ["socks-proxy"] }

[package]
name = "oporus"
description = " (Recovered) Rust Opus codec."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
keywords = ["audio", "codec", "decoder", "opus"]
exclude = [
    ".claude",
    ".github",
    ".DS_Store",
    "AGENTS.md",
    "BENCHMARK_COMPARE.md",
    "CLAUDE.md",
    "Dockerfile.opus-fuzz",
    "FIXED_POINT_ALIGN_PLAN.md",
    "ctests",
    "opus-c",
    "opus-go",
    "opus_decode_fuzzer",
    "scripts",
    "testdata",
    "*.opuspkt",
    "*.pcm",
    "*.wav",
]

[features]
default = []
fixed_point = []
force-scalar = []
enable_res24 = ["fixed_point"]
deep_plc = ["dred"]
deep_plc_weights = ["deep_plc", "oporus-deep-plc-weights"]
deep_plc_weights_fetch = ["deep_plc_weights", "oporus-deep-plc-weights/fetch"]
dred = ["oporus-dred-weights"]
dred_fetch = ["dred", "oporus-dred-weights/fetch"]
custom_modes = []
silk_strict_asserts = []
silk_debug = ["dep:spin"]
silk_tic_toc = ["dep:spin"]
dhat_alloc = ["dep:dhat"]

[dependencies]
libm = "0.2"
cfg-if = "1.0"
log = { version = "0.4", default-features = false }
bitflags = "2"
spin = { version = "0.9", default-features = false, features = [
    "mutex",
    "spin_mutex",
], optional = true }
oporus-deep-plc-weights = { version = "0.2.2", path = "oporus-deep-plc-weights", optional = true }
oporus-dred-weights = { version = "0.2.2", path = "oporus-dred-weights", optional = true }
dhat = { version = "0.3", optional = true }


[lints.clippy]
cast_lossless = "warn"
comparison_chain = "warn"
default_trait_access = "warn"
explicit_deref_methods = "warn"
if_not_else = "warn"
index_refutable_slice = "warn"
manual_assert = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
needless_pass_by_value = "warn"
redundant_else = "warn"
excessive_precision = "allow"

[dev-dependencies]
sha2.workspace = true
