[package]
name = "oporus-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.oporus]
path = ".."

[[bin]]
name = "decode_fuzzer"
path = "fuzz_targets/decode_fuzzer.rs"
test = false
doc = false
bench = false
