[package]
name = "oporus-deep-plc-weights"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Build-time deep PLC weights blob for Oporus."
build = "build.rs"

[features]
fetch = []

[build-dependencies]
flate2.workspace = true
sha2.workspace = true
tar.workspace = true
ureq.workspace = true
