[package]
name = "oporus-dred-weights"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license = "MIT"
description = "Build-time downloader and generator for DRED weights."
repository = "https://github.com/cijiugechu/oporus"

[features]
fetch = []

[build-dependencies]
flate2.workspace = true
sha2.workspace = true
tar.workspace = true
ureq.workspace = true
