[package]
name = "oporus-dred-weights"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Build-time downloader and generator for DRED weights."

[features]
fetch = []

[build-dependencies]
flate2.workspace = true
sha2.workspace = true
tar.workspace = true
ureq.workspace = true
